--- a/src/components/GradientScroll.module.scss
+++ b/src/components/GradientScroll.module.scss
@@ -1,32 +1,26 @@
 .container {
-  width: 100%;
-  height: 100%;
   position: relative;
+  display: flex;
+  overflow-y: auto;
 }
 
 .scrollable {
-  width: 100%;
-  height: 100%;
-  max-height: 100%;
-  position: relative;
+  flex: 1 1 0;
+  display: flex;
   overflow-y: auto;
 }
 
 .content {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  z-index: 0;
-  top: 0px;
+  flex: 1 1 auto;
 }
 
 .overlay {
+  position: absolute;
+  display: block;
+  top: 0px;
+  z-index: 1;
   width: 100%;
   height: 100%;
-  display: block;
-  position: sticky;
-  z-index: 1;
-  top: 0px;
   pointer-events: none;
 
   &:before,
@@ -42,8 +36,8 @@
   &:before {
     top: 0px;
     background: linear-gradient(
-      rgba(#333, 0.2),
-      rgba(#aaa, 0.2) 30%,
+      rgba(85, 85, 85, 0.25),
+      rgba(106, 106, 106, 0.15) 25%,
       transparent
     );
   }
@@ -52,8 +46,8 @@
     bottom: 0px;
     background: linear-gradient(
       transparent,
-      rgba(#aaa, 0.2) 70%,
-      rgba(#333, 0.2)
+      rgba(106, 106, 106, 0.15) 75%,
+      rgba(85, 85, 85, 0.25)
     );
   }
 
